# spark-sight

./: .gitignore  README.md  conftest.py  edit.txt  pyproject.toml  requirements-dev.txt
spark_sight/: data_references.py  execute.py  util.py
spark_sight/create_charts/: dash_poc.py  dash_poc_2.py  parsing_spark_history_server.py
spark_sight/create_charts/assets/: dash_poc.css
spark_sight/create_charts/pickle_objs/: fig_efficiency  fig_memory  fig_spill  fig_stages
spark_sight/create_charts/pickle_objs/cpus_60_very_big/: fig_efficiency  fig_spill  fig_stages
spark_sight/log_parse/: main.py
spark_sight/log_transform/: main.py
tests/: __init__.py  assets.py  execute_1.py  test_e2e.py  test_e2e_spill_false  test_e2e_spill_true  test_util.py
tests/deleteme_memory/: task_info_after_lines.pickle
tests/log_parse/: __init__.py  extract_task_info__completed__expected.csv  extract_task_info__expected.csv  extract_task_info__incomplete__expected.csv  spark_event_log__input.csv  test_log_parse.py
tests/log_transform/: __init__.py  aggregate_tasks_in_splits__input.csv  check_tasks_are_split_correctly.csv  determine_borders_of_stages_asoftasks__input.csv  test_log_transform.py
tests/shs/: __init__.py  split_on_borders__split_multiple.csv  split_on_borders__split_multiple__expected.csv  split_on_borders__split_single_no.csv  split_on_borders__split_single_no__expected.csv  test_split_on_border.py
tests/shs/with_split_debug/: split_on_borders__split_multiple__expected.csv
