[tool.poetry]
name = "spark-sight"
version = "0.1.0"
description = "Spark performance at a glance"
authors = ["Alfredo Fomitchenko <alfredo.fomitchenko@mail.polimi.it>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = ">=1.1,<=1.4.2"
plotly = ">=5,<=5.7.0"

[tool.poetry.scripts]
spark-sight = 'spark_sight.execute:main_cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
